--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,6 @@
-{
+  {
   "extends": "airbnb-base",
-  "rules": {
-        "allow": [
-          "_id"
-        ]
+    "rules": {
+    "no-underscore-dangle": ["error", { "allow": ["_id"]}]
   }
-}
+  }
