--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   },
   "homepage": "https://github.com/madey-kv/express-mesto-gha#readme",
   "devDependencies": {
-    "nodemon": "^2.0.19",
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1",
+    "validator": "^13.7.0"
   }
 }
